; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_sqlite3_overload_function.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_sqlite3_overload_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@SQLITE_UTF8 = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_NOMEM = common dso_local global i32 0, align 4
@sqlite3InvalidFunction = common dso_local global i32 0, align 4
@sqlite3_free = common dso_local global i32 0, align 4
@SQLITE_MISUSE_BKPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_overload_function(%struct.TYPE_6__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @sqlite3_mutex_enter(i32 %12)
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @SQLITE_UTF8, align 4
  %18 = call i64 @sqlite3FindFunction(%struct.TYPE_6__* %14, i8* %15, i32 %16, i32 %17, i32 0)
  %19 = icmp ne i64 %18, 0
  %20 = zext i1 %19 to i32
  store i32 %20, i32* %8, align 4
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @sqlite3_mutex_leave(i32 %23)
  %25 = load i32, i32* %8, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %3
  %28 = load i32, i32* @SQLITE_OK, align 4
  store i32 %28, i32* %4, align 4
  br label %45

29:                                               ; preds = %3
  %30 = load i8*, i8** %6, align 8
  %31 = call i8* @sqlite3_mprintf(i8* %30)
  store i8* %31, i8** %9, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = icmp eq i8* %32, null
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %35, i32* %4, align 4
  br label %45

36:                                               ; preds = %29
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %38 = load i8*, i8** %6, align 8
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* @SQLITE_UTF8, align 4
  %41 = load i8*, i8** %9, align 8
  %42 = load i32, i32* @sqlite3InvalidFunction, align 4
  %43 = load i32, i32* @sqlite3_free, align 4
  %44 = call i32 @sqlite3_create_function_v2(%struct.TYPE_6__* %37, i8* %38, i32 %39, i32 %40, i8* %41, i32 %42, i32 0, i32 0, i32 %43)
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %36, %34, %27
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @sqlite3_mutex_enter(i32) #1

declare dso_local i64 @sqlite3FindFunction(%struct.TYPE_6__*, i8*, i32, i32, i32) #1

declare dso_local i32 @sqlite3_mutex_leave(i32) #1

declare dso_local i8* @sqlite3_mprintf(i8*) #1

declare dso_local i32 @sqlite3_create_function_v2(%struct.TYPE_6__*, i8*, i32, i32, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
